--- a/package.json
+++ b/package.json
@@ -7,11 +7,8 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.16.4",
-    "discord.js": "^11.4.2",
-    "request": "^2.88.0",
-    "moment": "^2.24.0",
-    "moment-duration-format": "^2.2.2"
+    "discord.js": "^13.1.0",
+    "dotenv": "10.0.0"
   },
   "engines": {
     "node": "8.x"
